# sample-server/routes/index.js
@@ -1,13 +1,13 @@
 const express = require('express');
 const router = express.Router();
 const userService = require('../services/user.service');
+const adminService = require('../services/admin.service');
 const Yup = require('yup');
  
 const registerSchema = Yup.object().shape({
   name: Yup.string().required().min(2).max(20),
   email: Yup.string().email().required(),
   password: Yup.string().required().min(6).max(10),
-  role: Yup.number().positive().integer(),
 });
 
 const authenticateSchema = Yup.object().shape({
@@ -23,11 +23,22 @@ router.get('/', function(req, res, next) {
 router.post('/authenticate', async function(req, res, next) {
   try {
       await authenticateSchema.validate(req.body);
+      const token = await adminService.authenticate(req.body);
+      res.json({ success: true, result: { token } });
+  } catch(e) {
+      console.log(e);
+      res.json({ success: false, errors: (e.errors ? e.errors : [e.message]) });
+  }
+});
+
+router.post('/userauthenticate', async function(req, res, next) {
+  try {
+      await authenticateSchema.validate(req.body);
       const token = await userService.authenticate(req.body);
       res.json({ success: true, result: { token } });
   } catch(e) {
       console.log(e);
-      res.json({ success: false });
+      res.json({ success: false, errors: (e.errors ? e.errors : [e.message]) });
   }
 });
 
@@ -38,7 +49,7 @@ router.post('/register', async function(req, res, next) {
       res.json({ success: true, result: {} });
   } catch(e) {
       console.log(e);
-      res.json({ success: false });
+      res.json({ success: false, errors: (e.errors ? e.errors : [e.message]) });
   }
 });
 
